Upgrade Jetty to version 12